CMS-14611 Fix alignment of buttons in schedule form
(cherry picked from commit 0e636ca62f8849b7ff350a26f0aa604836e4ee96)

--- a/channel-manager/ui/src/app/versions/components/schedule-form/schedule-form.component.scss
+++ b/channel-manager/ui/src/app/versions/components/schedule-form/schedule-form.component.scss
@@ -14,8 +14,8 @@
  * limitations under the License.
  */
 
-@import '~@bloomreach/frontend-theme/palettes';
-@import 'variables';
+@import "~@bloomreach/frontend-theme/palettes";
+@import "variables";
 
 :host {
   padding-top: $spacing-half;
@@ -34,11 +34,11 @@
   display: flex;
   justify-content: flex-end;
 
-  button:first-of-type {
-    margin-right: auto;
-  }
-
   button:not(:first-of-type) {
     margin-left: $spacing-half;
+  }
+
+  .schedule-remove {
+    margin-right: auto;
   }
 }
